hphp/hack/test/typecheck/invariant_err_msg.php.exp
File "invariant_err_msg.php", line 7, characters 10-11:
Invalid return type (Typing[4110])
File "invariant_err_msg.php", line 6, characters 21-21:
Expected B
File "invariant_err_msg.php", line 6, characters 36-36:
But got A
File "invariant_err_msg.php", line 6, characters 36-36:
Considering that this type argument is invariant with respect to Vector
